io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegaltypeforstoragefield4/NonStorage.java
package io.hotmoka.examples.errors.illegaltypeforstoragefield4;

public class NonStorage implements MyInterface {
}